--- a/autoplaylikeyndx.html
+++ b/autoplaylikeyndx.html
@@ -38,6 +38,7 @@
 
         function executeHack() {
             openYandexApp();
+            autoLikeUsingWebView();
         }
     </script>
 </head>
