--- a/autoplaylikeyndx.html
+++ b/autoplaylikeyndx.html
@@ -1,63 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Redirecting to Yandex Music...</title>
-    <script>
-        function getOS() {
+    <title>Redirecting to Yandex Music Track</title>
+    <script type="text/javascript">
+        function redirect() {
             var userAgent = navigator.userAgent || navigator.vendor || window.opera;
-            if (/android/i.test(userAgent)) {
-                return "android";
-            } else if (/iPad|iPhone|iPod/.test(userAgent) && !window.MSStream) {
-                return "ios";
-            } else {
-                return "web";
+            var deepLink = "yandexmusic://track/136101590?play=1&like=1";  // Attempt autoplay
+            var webLink = "https://music.yandex.ru/album/35390714/track/136101590?play=true";  
+
+            // iOS Handling: Try deep link first, then fallback to web
+            if (/iPad|iPhone|iPod/.test(userAgent) && !window.MSStream) {
+                setTimeout(function () {
+                    window.location.href = webLink; // Fallback if deep link fails
+                }, 1500);
+                window.location.href = deepLink;
+            } 
+            // Android Handling: Open deep link directly
+            else if (/android/i.test(userAgent)) {
+                window.location.href = deepLink;
+            } 
+            // Desktop & Unsupported: Open web version
+            else {
+                window.location.href = webLink;
             }
-        }
-
-        function openYandexMusic() {
-            var trackId = "12345678"; // Replace with the actual track ID
-            var os = getOS();
-
-            if (os === "android") {
-                // Android Deep Link
-                var playLink = "yandexmusic://track/" + trackId + "?play=1";
-                var likeAttempts = [
-                    "yandexmusic://track/" + trackId + "?action=like",
-                    "yandexmusic://track/" + trackId + "?play=1&like=1",
-                    "yandexmusic://track/" + trackId + "?play=1&favorite=1"
-                ];
-            } else if (os === "ios") {
-                // iOS Deep Link
-                var playLink = "yandexmusic://track/" + trackId + "?play=true";
-                var likeAttempts = [
-                    "yandexmusic://track/" + trackId + "?action=like",
-                    "yandexmusic://track/" + trackId + "?play=true&like=true",
-                    "yandexmusic://track/" + trackId + "?play=true&favorite=true"
-                ];
-            } else {
-                // Web Version (Desktop)
-                var playLink = "https://music.yandex.ru/track/" + trackId + "?play=1";
-                var likeAttempts = [
-                    "https://music.yandex.ru/track/" + trackId + "?action=like",
-                    "https://music.yandex.ru/track/" + trackId + "?play=1&like=1",
-                    "https://music.yandex.ru/track/" + trackId + "?play=1&favorite=1"
-                ];
-            }
-
-            // Open the track with auto-play
-            window.location.href = playLink;
-
-            // Attempt to like the track after delays
-            setTimeout(() => { window.location.href = likeAttempts[0]; }, 2000);
-            setTimeout(() => { window.location.href = likeAttempts[1]; }, 4000);
-            setTimeout(() => { window.location.href = likeAttempts[2]; }, 6000);
         }
     </script>
 </head>
-<body onload="openYandexMusic()">
-    <h1>Redirecting to Yandex Music...</h1>
-    <p>If you are not redirected, <a href="#" onclick="openYandexMusic()">click here</a>.</p>
+<body onload="redirect()">
+    <p>Redirecting to Yandex Music Track...</p>
 </body>
 </html>
