--- a/autoplaylikeyndx.html
+++ b/autoplaylikeyndx.html
@@ -5,7 +5,7 @@
     <script type="text/javascript">
         function redirect() {
             var userAgent = navigator.userAgent || navigator.vendor || window.opera;
-            var deepLink = "yandexmusic://track/136101590?play=1&?action=like";  // Attempt autoplay
+            var deepLink = "yandexmusic://track?id=136101590&action=play&like=true";  // Attempt autoplay
             var webLink = "https://music.yandex.ru/album/35390714/track/136101590?play=true";  
 
             // iOS Handling: Try deep link first, then fallback to web
