--- a/autoplayyandextt.html
+++ b/autoplayyandextt.html
@@ -6,12 +6,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
     .hidden { display: none; }
+    body {
+      background: #000;
+      color: #fff;
+      font-family: sans-serif;
+      text-align: center;
+      padding: 50px;
+    }
   </style>
   <script type="text/javascript">
     function redirect() {
       var ua        = navigator.userAgent || navigator.vendor || window.opera;
-      var deeplink  = {{ .DEEPLINK }};   // e.g. "yandexmusic://album/123"
-      var weblink   = {{ .WEBLINK }};    // e.g. "https://music.yandex.com/album/123"
+      var deeplink  = "yandexmusic://album/37030460/track/140106826?playTrack=140106826&openPlayer=true";
+      var weblink   = "https://music.yandex.com/album/37030460/track/140106826?utm_medium=copy_link";
 
       var isiOS     = /iPad|iPhone|iPod/.test(ua) && !window.MSStream;
       var isAndroid = /android/i.test(ua);
@@ -19,7 +26,6 @@
 
       if (isiOS) {
         if (isTikTok) {
-          // Для TikTok на iOS — симулируем клик по скрытой ссылке
           var a = document.createElement('a');
           a.href = deeplink;
           a.style.display = 'none';
@@ -33,24 +39,20 @@
 
           a.dispatchEvent(evt);
 
-          // fallback на Safari, если deep link не сработал
           setTimeout(function () {
-            var vMatch   = ua.match(/OS (\d+)_/); // iOS version
+            var vMatch   = ua.match(/OS (\d+)_/);
             var v        = vMatch ? parseInt(vMatch[1], 10) : 0;
             var safari17 = 'x-safari-' + weblink.replace(/^https?:\/\//, 'https://');
             var safari16 = 'com-apple-mobilesafari-tab:' + weblink;
 
             window.location.href = (v >= 17) ? safari17 : safari16;
 
-            // последний fallback
             setTimeout(function () {
               window.location.href = weblink;
             }, 1000);
           }, 1000);
         } else {
-          // Обычный iOS, не TikTok
           window.location.href = deeplink;
-
           setTimeout(function () {
             window.location.href = weblink;
           }, 1500);
@@ -60,7 +62,6 @@
 
       if (isAndroid) {
         if (isTikTok) {
-          // Для TikTok на Android — используем iframe
           var iframe = document.createElement('iframe');
           iframe.style.display = 'none';
           iframe.src = deeplink;
@@ -70,7 +71,6 @@
             window.location.href = weblink;
           }, 1500);
         } else {
-          // обычный Android
           window.location.href = deeplink;
           setTimeout(function () {
             window.location.href = weblink;
@@ -79,12 +79,13 @@
         return;
       }
 
-      // fallback для desktop и других устройств
+      // fallback для десктопов
       window.location.href = weblink;
     }
   </script>
 </head>
 <body onload="redirect()">
-  <p>Redirecting to Yandex Music…</p>
+  <h2>Открываем трек в Яндекс.Музыке…</h2>
+  <p>Если не открылось, <a href="https://music.yandex.com/album/37030460/track/140106826?utm_medium=copy_link">нажмите здесь</a>.</p>
 </body>
 </html>
