--- a/autoplayyndx1.html
+++ b/autoplayyndx1.html
@@ -36,8 +36,8 @@
     }
 
     // ===== 1) ТВОИ ССЫЛКИ (жёстко) =====
-    const deeplink = "yandexmusic://track/136101590?play=1";
-    const weblink  = "https://music.yandex.ru/album/35390714/track/136101590";
+    const deeplink = "yandexmusic://album/23426057/track/136101590?play=1";
+    const weblink  = "https://music.yandex.com/album/23426057/track/103189404";
 
     // Привязка кнопок
     const openAppEl = document.getElementById('openApp');
