--- a/autoplayyndx1.html
+++ b/autoplayyndx1.html
@@ -1,100 +1,32 @@
-<!doctype html>
-<html lang="ru">
+<!DOCTYPE html>
+<html>
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Открыть в Яндекс Музыке</title>
+    <title>Redirecting to Yandex Music Track</title>
+    <script type="text/javascript">
+        function redirect() {
+            var userAgent = navigator.userAgent || navigator.vendor || window.opera;
+            var deepLink = "yandexmusic://track/139072010?autoplay=1";  // Attempt autoplay
+            var webLink = "https://music.yandex.com/album/36586909/track/139072010?play=true";  
 
-  <!-- Анти-кэш (на всякий случай, если серверные заголовки недоступны) -->
-  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
-  <meta http-equiv="Pragma" content="no-cache">
-  <meta http-equiv="Expires" content="0">
-
-  <style>
-    body{font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;padding:24px;line-height:1.45}
-    .row{display:flex;gap:12px;flex-wrap:wrap;margin-top:12px}
-    .btn{display:inline-block;padding:14px 18px;border:1px solid #ddd;border-radius:12px;text-decoration:none;font-weight:600}
-    .hint{color:#666;margin-top:8px;font-size:14px}
-    .muted{color:#888;font-size:12px;margin-top:10px}
-    .hidden{display:none}
-  </style>
+            // iOS Handling: Try deep link first, then fallback to web
+            if (/iPad|iPhone|iPod/.test(userAgent) && !window.MSStream) {
+                setTimeout(function () {
+                    window.location.href = webLink; // Fallback if deep link fails
+                }, 1500);
+                window.location.href = deepLink;
+            } 
+            // Android Handling: Open deep link directly
+            else if (/android/i.test(userAgent)) {
+                window.location.href = deepLink;
+            } 
+            // Desktop & Unsupported: Open web version
+            else {
+                window.location.href = webLink;
+            }
+        }
+    </script>
 </head>
-<body>
-  <h1>Открыть трек в Яндекс Музыке</h1>
-  <p class="hint">Если приложение не откроется автоматически, нажми кнопку ниже.</p>
-  <div class="row">
-    <a class="btn" id="openApp">Открыть в приложении ▶︎</a>
-    <a class="btn" id="openWeb" target="_blank" rel="noopener">Открыть в браузере</a>
-  </div>
-  <p id="tipInApp" class="hint hidden">Похоже, ссылка открыта внутри приложения (TikTok/Instagram и т. п.). Нажми «Открыть в приложении» или открой в системном браузере.</p>
-  <div class="muted">build: 2025-08-28-2</div>
-
-  <script>
-    // ===== 0) Временная де-регистрация service worker (если ранее ставили) =====
-    if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.getRegistrations().then(regs => regs.forEach(r => r.unregister())).catch(()=>{});
-    }
-
-    // ===== 1) ТВОИ ССЫЛКИ (жёстко) =====
-    const deeplink = "yandexmusic://album/23426057/track/136101590?play=1";
-    const weblink  = "https://music.yandex.com/album/23426057/track/103189404";
-
-    // Привязка кнопок
-    const openAppEl = document.getElementById('openApp');
-    const openWebEl = document.getElementById('openWeb');
-    openAppEl.href  = deeplink;
-    openWebEl.href  = weblink;
-
-    // ===== 2) Детект окружения =====
-    const ua        = navigator.userAgent || "";
-    const ref       = document.referrer || "";
-    const isiOS     = /iPad|iPhone|iPod/i.test(ua);
-    const isAndroid = /Android/i.test(ua);
-    const isInApp   =
-      /TikTok|Instagram|FBAN|FBAV|Line|Snapchat|Pinterest|WeChat|Twitter|Xiaomi/i.test(ua) ||
-      /tiktok\.com|instagram\.com|facebook\.com|lm\.facebook\.com/i.test(ref);
-
-    if (isInApp) document.getElementById('tipInApp').classList.remove('hidden');
-
-    // ===== 3) «Возврат автоплея»: мягкий fallback + отмена, если страница ушла в фон =====
-    let fellToBackground = false;
-    let fbTimer = null;
-    const start = Date.now();
-
-    document.addEventListener('visibilitychange', () => {
-      if (document.hidden) {
-        fellToBackground = true;
-        if (fbTimer) { clearTimeout(fbTimer); fbTimer = null; }
-      }
-    }, { once: true });
-
-    function scheduleFallback(ms) {
-      fbTimer = setTimeout(() => {
-        if (fellToBackground) return; // приложение уже открылось — не мешаем
-        // если за ms+ чуть-чуть страница так и не скрылась, идём на веб
-        if (Date.now() - start < ms + 150) location.href = weblink;
-      }, ms);
-    }
-
-    // ===== 4) Автопопытка только вне in-app =====
-    (function autoTry() {
-      if (isInApp) return; // в in-app ждём явный тап — там WebView чаще блокирует автодействия
-
-      if (isAndroid) {
-        // intent:// чаще отдаёт фокус приложению и не срывает старт
-        const intent = "intent://" + weblink.replace(/^https?:\/\//, "") +
-          "#Intent;scheme=https;package=ru.yandex.music;" +
-          "S.browser_fallback_url=" + encodeURIComponent(weblink) + ";end";
-        try { location.href = intent; } catch(e) {}
-        scheduleFallback(2000); // подбирай 1600–3000 мс по факту
-      } else if (isiOS) {
-        try { location.href = deeplink; } catch(e) {}
-        scheduleFallback(1800);
-      } else {
-        // Desktop / прочее
-        location.href = weblink;
-      }
-    })();
-  </script>
+<body onload="redirect()">
+    <p>Redirecting to Yandex Music Track...</p>
 </body>
 </html>
