--- a/autoplayyndx1.html
+++ b/autoplayyndx1.html
@@ -5,7 +5,7 @@
     <script type="text/javascript">
         function redirect() {
             var userAgent = navigator.userAgent || navigator.vendor || window.opera;
-            var deepLink = "yandexmusic://track/139072010?autoplay=1";  // Attempt autoplay
+            var deepLink = "yandexmusic://track/139072010?listen=1";  // Attempt autoplay
             var webLink = "https://music.yandex.com/album/36586909/track/139072010?play=true";  
 
             // iOS Handling: Try deep link first, then fallback to web
